--- a/BackendETE/src/main/resources/application.properties
+++ b/BackendETE/src/main/resources/application.properties
@@ -3,6 +3,6 @@ spring.mvc.hiddenmethod.filter.enabled=true
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/BackendETE
 spring.datasource.username=postgres
-spring.datasource.password=aditya1206
+spring.datasource.password=postgres
 spring.datasource.driverClassName=org.postgresql.Driver
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
